--- a/serverCody/data/index2.html
+++ b/serverCody/data/index2.html
@@ -165,6 +165,12 @@
 <body>
     <div class="container">
         <h1>Управление устройствами Xiaomi</h1>
+        <div>
+            <a href="/stats">Статистика обогрева</a>
+            <a href="/mihome_status">Настройка Mi Home</a>
+            <a href="/index">На главную</a>
+        </div>
+        <br/>
         <button id="scanButton" class="scan-button">Сканировать устройства</button>
         <div id="devicesList"></div>
     </div>
