--- a/serverCody/data/index.html
+++ b/serverCody/data/index.html
@@ -125,6 +125,12 @@
     <div class="container">
         <h1>Управление устройствами Xiaomi</h1>
         <div>
+            <a href="/stats">Статистика обогрева</a>
+            <a href="/mihome_status">Настройка Mi Home</a>
+            <a href="/index2">Сканирование</a>
+        </div>
+        <br/>
+        <div>
             <button class="scan" onclick="startScan()">Запустить BLE сканирование</button>
             <button onclick="loadClients()">Обновить список устройств</button>
         </div>
