обновление web server

--- a/serverCody/data/index.html
+++ b/serverCody/data/index.html
@@ -126,7 +126,7 @@
         <h1>Управление устройствами Xiaomi</h1>
         <div>
             <a href="/stats">Статистика обогрева</a>
-            <a href="/mihome_status">Настройка Mi Home</a>
+            <a href="/mihome">Настройка Mi Home</a>
             <a href="/index2">Сканирование</a>
         </div>
         <br/>
