--- a/serverCody/data/heating_stats.html
+++ b/serverCody/data/heating_stats.html
@@ -80,7 +80,11 @@
 <body>
     <div class="container">
         <h1>Статистика обогрева</h1>
-
+        <div>
+            <!-- <a href="/mihome">Настройка Mi Home</a> -->
+            <a href="/index">На главную</a>
+        </div>
+        <br />
         <table id="stats-table">
             <thead>
                 <tr>
@@ -99,7 +103,6 @@
         </table>
 
         <button class="button" onclick="refreshStats()">Обновить статистику</button>
-        <button class="button" onclick="window.location.href='/'">На главную</button>
         <!-- Добавляем кнопку сброса статистики -->
         <button class="button" onclick="resetStats()">Сбросить статистику</button>
     </div>
