--- a/serverCody/data/index2.html
+++ b/serverCody/data/index2.html
@@ -167,7 +167,7 @@
         <h1>Управление устройствами Xiaomi</h1>
         <div>
             <a href="/stats">Статистика обогрева</a>
-            <a href="/mihome">Настройка Mi Home</a>
+            <!-- <a href="/mihome">Настройка Mi Home</a> -->
             <a href="/index">На главную</a>
         </div>
         <br/>
