--- a/data/index2.html
+++ b/data/index2.html
@@ -236,7 +236,7 @@
                 macAddress.textContent = `MAC: ${device.macAddress}`;
                 
                 const temperature = document.createElement('div');
-                temperature.textContent = `Температура: ${device.temperature}°C`;
+                temperature.textContent = `Температура: ${device.currentTemperature}°C`;
                 
                 const battery = document.createElement('div');
                 battery.textContent = `Батарея: ${device.battery}%`;
