--- a/data/managment_device.html
+++ b/data/managment_device.html
@@ -12,11 +12,14 @@
     <div class="container">
         <h1>Управление устройствами</h1>
         <div>
+            <a href="index.html">Главная</a>
             <a href="heating_stats.html">Статистика обогрева</a>
+            <a href="managment_device.html">Управление устройствами</a>
             <a href="gpio_settings.html">Настройки GPIO</a>
-            <a href="index.html">На главную</a>
+            <a href="logs.html">Логи</a>
         </div>
-        <br />
+    </div>
+    <div class="container">
         <button id="scanButton" class="scan-button">Сканировать устройства</button>
         <div id="devicesList"></div>
     </div>
