--- a/data/gpio_settings.html
+++ b/data/gpio_settings.html
@@ -12,9 +12,11 @@
     <div class="container">
         <h1>Настройки GPIO</h1>
         <div>
+             <a href="index.html">Главная</a>
             <a href="heating_stats.html">Статистика обогрева</a>
             <a href="managment_device.html">Управление устройствами</a>
-            <a href="index.html">На главную</a>
+            <a href="gpio_settings.html">Настройки GPIO</a>
+            <a href="logs.html">Логи</a>
         </div>
         <br />
     </div>
