--- a/data/index.html
+++ b/data/index.html
@@ -12,9 +12,11 @@
     <div class="container">
         <h1>Управление отоплением</h1>
         <div>
+            <a href="index.html">Главная</a>
             <a href="heating_stats.html">Статистика обогрева</a>
             <a href="managment_device.html">Управление устройствами</a>
             <a href="gpio_settings.html">Настройки GPIO</a>
+            <a href="logs.html">Логи</a>
         </div>
     </div>
 
