убрал очередь из парсинга и др...

--- a/data/gpio_settings.html
+++ b/data/gpio_settings.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Настройки GPIO</h1>
-        <div>
+        <div class="menu">
              <a href="index.html">Главная</a>
             <a href="heating_stats.html">Статистика обогрева</a>
             <a href="managment_device.html">Управление устройствами</a>
